# ErisPulse-WebhookAdapter

./: .gitignore  README.md  platform-features.md  pyproject.toml
WebhookAdapter/: Converter.py  Core.py  __init__.py
